feat: implement messaging, enhanced reports, settings, and subdivision features; update GIS and GIS cache, add integration tests, and polish UI/styling